General cleanup and maintenance: * Make FBConnectionProperties really cloneable * Include FBTbpMapper in equals and hashcode of FBConnectionProperties and ensure better distributed hashcode * Make FBTbpMapper cloneable and implement equals and hashcode * Add serialVersionUID * Replace new Integer(..) with Integer.valueOf(..)